--- a/css/main.css
+++ b/css/main.css
@@ -1,69 +1,144 @@
 @charset "UTF-8";
+* {
+  box-sizing: border-box; }
+
 body {
-  background-color: green; }
+  min-width: 550px;
+  margin: 0;
+  background-color: black; }
 
 #header {
-  background-color: red;
+  background-color: black;
   width: 100%;
-  height: 50px; }
+  height: 25px;
+  text-align: center; }
+  #header button {
+    font-weight: bold;
+    margin-left: 25px;
+    margin-right: 25px; }
 
-#table {
-  background-color: red;
-  width: 75%;
-  height: 100px; }
+#whole_table {
+  border: 20px solid #452209;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  background-color: green;
+  text-align: center;
+  min-height: 600px; }
 
-#table_text {
-  background-color: yellow;
-  width: 75%;
-  height: 50px; }
-
-#result {
-  background-color: white;
-  width: 75%;
-  height: 20px; }
-
-#dealer,
-#player1 {
-  background-color: yellow;
-  width: 75%;
-  height: 200px; }
+#dealer h2,
+#player1 h2 {
+  margin-top: 0;
+  margin-bottom: 0; }
 
 .total_points {
-  display: inline-block;
+  margin: auto;
   background-color: black;
   color: white;
-  width: 50%;
+  width: 40%;
   height: 20px; }
+
+#table_text {
+  color: white; }
+  #table_text h1 {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em; }
+
+#result {
+  display: inline-block;
+  color: white;
+  border: 1px dashed white;
+  border-radius: 5px;
+  width: 85%;
+  min-width: 400px;
+  height: 20px;
+  font-weight: bold;
+  margin-bottom: 15px; }
+  #result p {
+    margin: 0; }
+
+#chips,
+#datas {
+  width: 25%;
+  min-width: 120px;
+  display: inline-block;
+  vertical-align: top; }
+
+#money,
+#bet,
+#prize {
+  display: block;
+  padding: 0;
+  margin-top: 10px;
+  width: 130px;
+  height: 20px;
+  vertical-align: bottom;
+  margin: auto;
+  font-weight: bold; }
 
 #money {
-  display: inline-block;
-  background-color: brown;
-  width: 25%;
-  height: 20px; }
+  background-color: brown; }
 
 #bet {
-  display: inline-block;
   background-color: purple;
-  width: 25%;
-  height: 20px; }
+  margin-top: 20px;
+  margin-bottom: 20px; }
 
 #prize {
-  display: inline-block;
-  background-color: orange;
-  width: 25%;
-  height: 20px; }
+  background-color: orange; }
 
 .cards {
-  background-color: blue;
-  width: 50%;
-  height: 150px;
-  display: inline-block;
+  border: 3px dashed white;
+  border-radius: 5px;
+  width: 40%;
+  height: 106px;
+  margin: auto;
   white-space: nowrap;
   overflow-x: auto;
   overflow-y: hidden;
-  text-align: center; }
+  text-align: center;
+  display: inline-block; }
   .cards img {
-    opacity: 0; }
+    opacity: 0;
+    height: 100px; }
+  @media only screen and (max-width: 1000px) {
+    .cards {
+      height: 126px; } }
+
+.get_bet_buttons {
+  margin-bottom: 10px; }
+
+#buttons {
+  margin-top: 20px;
+  margin-bottom: 50px; }
+
+#player1 input,
+#buttons button,
+#get_bet {
+  border-radius: 5px;
+  font-weight: bold;
+  text-align: center; }
+
+#player1 input:focus,
+#buttons button:hover,
+#get_bet:hover {
+  border: 1px dashed white;
+  background-color: green;
+  color: white;
+  box-shadow: 0 0 2px 1px black; }
+
+/* ------------------- the scrollbars on the playing field -------------------- */
+#dealer div::-webkit-scrollbar,
+#player1 div::-webkit-scrollbar {
+  width: 12px;
+  height: 12px; }
+
+#dealer div::-webkit-scrollbar-track,
+#player1 div::-webkit-scrollbar-track {
+  background: #004000; }
+
+#dealer div::-webkit-scrollbar-thumb,
+#player1 div::-webkit-scrollbar-thumb {
+  background: #008000; }
 
 /* ------------------- the chips -------------------- */
 .get_bet_buttons .get_bet {
@@ -74,6 +149,12 @@ body {
   font-weight: bold;
   font-size: 11px;
   box-shadow: 0 0 2px 1px black; }
+  @media only screen and (max-width: 1000px) {
+    .get_bet_buttons .get_bet {
+      border-width: 3.75px;
+      height: 33.75px;
+      width: 33.75px;
+      font-size: 8.25px; } }
 
 .get_bet_buttons .get_bet[value="1"] {
   border-color: #9e9e9e; }
@@ -208,9 +289,7 @@ body {
 #options div::-webkit-scrollbar,
 #rules div::-webkit-scrollbar {
   width: 12px;
-  /* for vertical scrollbars */
-  height: 12px;
-  /* for horizontal scrollbars */ }
+  height: 12px; }
 
 #options div::-webkit-scrollbar-track,
 #rules div::-webkit-scrollbar-track {
