--- a/css/main.scss
+++ b/css/main.scss
@@ -1,98 +1,198 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
-	background-color: green;
+	min-width: 550px;
+	margin: 0;
+	background-color: black;
 }
 
 #header {
-	background-color: red;
+	background-color: black;
 	width: 100%;
-	height: 50px;
+	height: 25px;
+	
+	text-align: center;
+	button {
+		font-weight: bold;
+		margin-left: 25px;
+		margin-right: 25px;
+	}
 }
 
-#table {
-	background-color: red;
-	width: 75%;
-	height: 100px;
+#whole_table {
+	border: 20px solid #452209;
+	border-bottom-left-radius: 50%;
+	border-bottom-right-radius: 50%;
+	background-color: green;
+	text-align: center;
+	min-height: 600px;
 }
 
-#table_text {
-	background-color: yellow;
-	width: 75%;
-	height: 50px;
-}
+#dealer h2,
+#player1 h2 {
+	margin-top: 0;
+	margin-bottom: 0;
 
-#result {
-	background-color: white;
-	width: 75%;
-	height: 20px;
-}
-
-#dealer,
-#player1 {
-	background-color: yellow;
-	width: 75%;
-	height: 200px;
 }
 
 .total_points {
-	display: inline-block;
+	margin: auto;
 	background-color: black;
 	color: white;
-	width: 50%;
+	width: 40%;
 	height: 20px;
 }
 
-#money {
+#table_text {
+	color: white;
+	h1 {
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;}
+}
+
+#result {
 	display: inline-block;
-	background-color: brown;
-	width: 25%;
+	color: white;
+	border: 1px dashed white;
+	border-radius: 5px;
+	width: 85%;
+	min-width: 400px;
 	height: 20px;
+	font-weight: bold;
+	p {
+		margin: 0;
+	}
+	margin-bottom: 15px;
+}
+
+#chips,
+#datas {
+	width: 25%;
+	min-width: 120px;
+	display: inline-block;
+	vertical-align:	top;
+}
+
+#money,
+#bet,
+#prize {
+	display: block;
+	padding: 0;
+	margin-top: 10px;
+	width: 130px;
+	height: 20px;
+	vertical-align:	bottom;
+	margin: auto;
+	// color: white;
+	// border: 1px dashed white;
+	// border-radius: 5px;
+	font-weight: bold;
+}
+
+
+#money {
+	background-color: brown;
 }
 
 #bet {
-	display: inline-block;
 	background-color: purple;
-	width: 25%;
-	height: 20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 #prize {
-	display: inline-block;
 	background-color: orange;
-	width: 25%;
-	height: 20px;
 }
 
 
-
-
-
-
-
 .cards {
-	background-color: blue;
-	width: 50%;
-	height: 150px;
-
-	display: inline-block;
+	border: 3px dashed white;
+	border-radius: 5px;
+	width: 40%;
+	height: 106px;
+	margin: auto;
 	white-space: nowrap;
 	overflow-x: auto;
 	overflow-y: hidden;
 	text-align: center;
+	display: inline-block;
 	img {
 		opacity: 0;
+		height: 100px;
 	}
+	@media only screen and (max-width: 1000px) {
+		height: 126px;
+	}
+}
+
+.get_bet_buttons {
+	margin-bottom: 10px;
+}
+
+#buttons {
+	margin-top: 20px;
+	margin-bottom: 50px;
+}
+
+#player1 input,
+#buttons button,
+#get_bet {
+	border-radius: 5px;
+	font-weight: bold;
+	text-align: center;
+}
+
+#player1 input:focus,
+#buttons button:hover,
+#get_bet:hover {
+	border: 1px dashed white;
+	background-color: green;
+	color: white;
+	box-shadow: 0 0 2px 1px rgba(0, 0, 0, 1);
+}
+
+/* ------------------- the scrollbars on the playing field -------------------- */
+
+#dealer div::-webkit-scrollbar,
+#player1 div::-webkit-scrollbar {
+  	width: 12px;
+  	height: 12px;
+}
+
+#dealer div::-webkit-scrollbar-track,
+#player1 div::-webkit-scrollbar-track {
+  	background: #004000;
+}
+
+#dealer div::-webkit-scrollbar-thumb,
+#player1 div::-webkit-scrollbar-thumb {
+  	background: #008000;
 }
 
 /* ------------------- the chips -------------------- */
 
+//the size of the chips
+$border: 5px;
+$height: 45px;
+$width: 45px;
+$font-size: 11px;
+
 .get_bet_buttons .get_bet {
 	border-radius: 100%;
-	border: 5px solid black;
-	height: 45px;
-	width: 45px;
+	border: $border solid black;
+	height: $height;
+	width: $width;
 	font-weight: bold;
-	font-size: 11px;
+	font-size: $font-size;
 	box-shadow: 0 0 2px 1px rgba(0, 0, 0, 1);
+	@media only screen and (max-width: 1000px) {
+		border-width: $border * 0.75;
+		height: $height * 0.75;
+		width: $width * 0.75;
+		font-size: $font-size * 0.75;
+	}
 }
 
 .get_bet_buttons .get_bet[value="1"] {
@@ -242,8 +342,8 @@ $modal_text_color: #bdbdbd;
 
 #options div::-webkit-scrollbar,
 #rules div::-webkit-scrollbar {
-  width: 12px;  /* for vertical scrollbars */
-  height: 12px; /* for horizontal scrollbars */
+  width: 12px;
+  height: 12px;
 }
 
 #options div::-webkit-scrollbar-track,
