--- a/css/main.scss
+++ b/css/main.scss
@@ -18,6 +18,12 @@ body {
 		font-weight: bold;
 		margin-left: 25px;
 		margin-right: 25px;
+		border-radius: 5px;
+	}
+	button:hover {
+		border: 1px solid rgba(40, 0, 80, 0.5);
+		background-color: rgba(55, 0, 110, 0.5); 
+		color: #bdbdbd;
 	}
 }
 
